--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="card-body text-center">
                   <h5 class="card-title">ToyTopia </h5>
                   <p class="card-text">A Toy Shop Website Build Using Html & Css </p>
-                  <a href="https://munitravels.infinityfreeapp.com/" class="btn signin">click here to View</a>
+                  <a href="https://akilanv2606.github.io/Toytopia/" class="btn signin">click here to View</a>
                 </div>
               </div>
             </div>
