--- a/index.html
+++ b/index.html
@@ -197,16 +197,16 @@
 
 
             <h4>HIGHER SECONDARY</h4>
-              <p>TEMP- MATRICULATION HIGHER SECONDARY SCHOOL, 
-                THIRUVARUR(----).
-                SCORED:100%                                    | 2022 - 2023 
+              <p>SWAMI DAYANANDA MATRICULATION HIGHER SECONDARY SCHOOL, 
+                MANJAKKUDI(THIRUVARUR).
+                SCORED:70%                                    | 2022 - 2023 
               </p>
 
 
               <h4>HIGH SCHOOL</h4>
               <p>
-                TEMP- MATRICULATION HIGHER SECONDARY SCHOOL, 
-                THIRUVARUR(----).
+                SWAMI DAYANANDA MATRICULATION HIGHER SECONDARY SCHOOL, 
+                MANJAKKUDI(THIRUVARUR).
                 SCORED:100%                                    | 2020 -  2021 
                 </p>
 
