--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 <section id="Contact">
   <div class="container-m5">
     <h1 class="text-center my-5">CONTACT</h1>
-    <p> <center>Phone : +91 9058888888 <br/>Mail : temp-mail@Akilan.net<br/>Address : 4/67 , chennai , 600005.</center>   
+    <p> <center>Phone : +91 8610505040 <br/>Mail : Akilanhelldrogo@gmail.com<br/>Address : 2/38,thirukkalambur,Sellur(pt),Kudavasal(tk),Thiruvarur(dt),613705</center>   
     </p>
 
   </div>
